<resources>
    <string name="app_name">EVA1_8_CALCULADORA</string>

    //Layer 0
    <string name="result_txt">0</string>

    //Layer 1
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="ms">MS</string>
    <string name="m">M</string>
    
    //Layer 2
    <string name="percentage">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="delete">d</string>
    
    //Layer 3
    <string name="down">1/n</string>
    <string name="square">^2</string>
    <string name="root">r</string>
    <string name="division">/</string>

    //Layer 4
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="mul">X</string>

    //Layer 5
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="minus">-</string>
    
    //Layer 6
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="plus">+</string>
    
    //Layer 7
    <string name="pos_ne">+/-</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="equal">=</string>

</resources>
