<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="#000000"
        android:backgroundTint="#F8E5E5"
        android:elegantTextHeight="false"
        android:freezesText="false"
        android:paddingStart="10dp"
        android:paddingTop="40dp"
        android:paddingEnd="13dp"
        android:text="@string/result_txt"
        android:textAlignment="textEnd"
        android:textColor="#3C3C3C"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:backgroundTint="#F8E5E5">

        <TableRow
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#966200EA"
                android:backgroundTint="#2196F3"
                android:text="@string/mc"
                android:textColor="#201E1E"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button5"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#966200EA"
                android:backgroundTint="#2196F3"
                android:text="@string/mr"
                android:textColor="#201E1E"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#966200EA"
                android:backgroundTint="#2196F3"
                android:text="@string/mplus"
                android:textColor="#201E1E"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#966200EA"
                android:backgroundTint="#2196F3"
                android:text="@string/mminus"
                android:textColor="#201E1E"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#966200EA"
                android:backgroundTint="#2196F3"
                android:text="@string/ms"
                android:textColor="#201E1E"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#966200EA"
                android:backgroundTint="#2196F3"
                android:text="@string/m"
                android:textColor="#201E1E"
                android:textSize="18sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button10"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/percentage"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button9"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/ce"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button7"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/c"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button8"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/delete"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button21"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/down"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button20"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/square"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button19"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/root"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button18"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/division"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button25"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n7"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button24"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n8"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button23"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n9"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button22"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/mul"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button29"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n4"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button28"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n5"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button27"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n6"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button26"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button33"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button32"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button31"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/n3"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button30"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button37"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:singleLine="false"
                android:text="@string/pos_ne"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#EEE4E4"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button36"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/zero"
                android:textColor="#EEE4E4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button34"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#434B68"
                android:text="@string/comma"
                android:textColor="#EEE4E4"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button35"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="72dp"
                android:background="#DD2C00"
                android:backgroundTint="#E6304FFE"
                android:text="@string/equal"
                android:textColor="#EEE4E4"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>